# performance-then-now-charts

./: README.md  main.py  pyproject.toml
data/: avg_iteration_duration_ms.csv  http_requests_per_second.csv  iterations_per_second.csv  max_vus.csv  outgoing_created_request_per_second.csv  tps.csv
